fixed the youarehere div, it's overlapping with the bradcrumb on IE7

--- a/www/resources/Selva/Selva-core.css
+++ b/www/resources/Selva/Selva-core.css
@@ -12,7 +12,7 @@ end Credits */
 body { 
 	background: #F2F1CB; 
 	font: 75%/120% "Trebuchet MS", "Lucida Grande", Arial, sans-serif ;
-	font: 80%/120% "Lucida Grande", Verdana, Arial, sans-serif !ie;
+	/* font: 80%/120% "Lucida Grande", Verdana, Arial, sans-serif !ie; */
 	color: #333333; 
 	margin: 0;
 	padding: 0;}
@@ -99,6 +99,7 @@ body {
 	}
 
 #youarehere 	{
+                margin-top: 5px;
 		color: #555555;
 		font-size: 150%;
 		font-weight:bold;
